added daisyui , followupData.json,Show followup data by json file

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* active nav-option design   */
+.active{
+    background-color: rgb(17, 17, 220);
+    color: white;
+}
