--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -1,8 +1,9 @@
 
 @import './table.scss';
+@import './theme.scss';
 
 .app{
-    max-width: 98%;
+    max-width: 100%;
     padding: 0;
     margin: 0 auto;
 }
