--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,15 @@
     background-color: rgb(17, 167, 226);
     color: white;
 }
+
+
+.custom-header {
+    background-color: #f5f5f5;
+    color: #333;
+    /* Add more custom styles for the header */
+  }
+  
+  .custom-header-cell {
+    font-weight: bold;
+    /* Add more custom styles for the header cells */
+  }
