--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -1,36 +1,24 @@
 $light-primary-color: #ffffff;
-$dark-primary-color: #333333;
+$dark-primary-color: #333;
 
 .light {
-  background-color: $light-primary-color;
-  color: $dark-primary-color;
+  background-color: #fff;
+  color: #111;
+}
+
+.lightSec {
+  background-color: #ddd;
+  color: #111;
 }
 
 .dark {
-  background-color: $dark-primary-color;
-  color: $light-primary-color;
-}
-
-.darkHover:hover {
-  background-color: #555;
-  color: $light-primary-color;
-}
-.darkHover {
-  background-color: #555;
-  color: $light-primary-color;
+  background-color: #111;
+  color: #fff;
 }
 
 
 .darkLight {
-  background-color: #555;
-  color: $light-primary-color;
+  background-color: #333;
+  color: #fff;
 }
 
-.darkLightHover {
-  background-color: $dark-primary-color;
-  color: $light-primary-color;
-}
-.darkLightHover:hover {
-  background-color: $dark-primary-color;
-  color: $light-primary-color;
-}
