--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 /* active nav-option design   */
 .active{
-    background-color: #6366F1;
-    color: white;
+    background-color: #444;
+    color: #000;
 }
 
 
