--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -3,22 +3,26 @@ $dark-primary-color: #333;
 
 .light {
   background-color: #fff;
-  color: #111;
+  color: #0a1929;
+  border: none;
 }
 
 .lightSec {
   background-color: #ddd;
-  color: #111;
+  color: #0a1929;
+  border: none;
 }
 
 .dark {
-  background-color: #111;
-  color: #fff;
+  background-color: #0a1929;
+  color: #f3f6f9;
+  border: none;
 }
 
 
 .darkLight {
-  background-color: #333;
-  color: #fff;
+  background-color: #ffffff1c;
+  color: #f3f6f9;
+  border: none;
 }
 
