--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -26,3 +26,14 @@ $dark-primary-color: #333;
   border: none;
 }
 
+.Error {
+  background-color: #c50000f6;
+  color: #f3f6f9;
+  border: none;
+}
+.Warning {
+  background-color: #e0b700da;
+  color: #f3f6f9;
+  border: none;
+}
+
