--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -1,6 +1,12 @@
 
 @import './table.scss';
 @import './theme.scss';
+@import './login.scss';
+
+*{
+    font-family: sans-serif;
+}
+
 
 .app{
     min-height: 100vh;
@@ -22,4 +28,20 @@ ul#activeClass{
             font-weight: bold;
         }
     }
+}
+
+
+.dashboard-table{
+    td{
+        text-align: center;
+    }
+}
+
+
+.table-content{
+
+}
+
+.table-content::-webkit-scrollbar-track {
+    background-color: #e20808; /* Change the color as desired */
 }
